<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vendor_card_view_body">

            <ImageView
                android:id="@+id/product_image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/product_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vendor_logo" />

            <TextView
                android:id="@+id/product_name"
                style="@style/VendorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                app:layout_constraintStart_toEndOf="@+id/product_image_logo"
                app:layout_constraintTop_toTopOf="@id/product_image_logo"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:visibility="invisible"
                android:background="@drawable/quantity_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_name"
                app:layout_constraintTop_toTopOf="@id/product_name"
                app:layout_constraintBottom_toBottomOf="@id/product_name"/>

            <TextView
                android:id="@+id/product_price"
                style="@style/VendorDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/product_price"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                app:layout_constraintStart_toEndOf="@id/product_image_logo"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="transparent"
                android:padding="5dp"
                android:contentDescription="@string/button_to_add_an_item"
                app:layout_constraintEnd_toEndOf="@id/btn_remove_from_cart"
                app:layout_constraintStart_toEndOf="@id/product_price"
                app:layout_constraintTop_toTopOf="@id/product_price"
                app:layout_constraintBottom_toBottomOf="@id/product_price"
                app:srcCompat="@drawable/ic_add_to_cart" />

            <ImageButton
                android:id="@+id/btn_remove_from_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:background="transparent"
                android:clickable="false"
                android:contentDescription="@string/button_to_remove_an_item"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@id/btn_add_to_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toEndOf="@id/btn_add_to_cart"
                app:layout_constraintTop_toTopOf="@id/btn_add_to_cart"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_remove_from_cart" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>